@@ -8,7 +8,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkStubInit.c,v 1.60.2.2 2009/06/27 19:53:16 nijtmans Exp $
+ * RCS: @(#) $Id: tkStubInit.c,v 1.60.2.3 2009/12/02 22:20:01 nijtmans Exp $
  */
 
 #include "tkInt.h"
@@ -380,6 +380,7 @@ TkIntPlatStubs tkIntPlatStubs = {
     TkWinGetPlatformId, /* 33 */
     TkWinSetHINSTANCE, /* 34 */
     TkWinGetPlatformTheme, /* 35 */
+    TkWinChildProc, /* 36 */
 #endif /* WIN */
 #ifdef MAC_OSX_TK /* AQUA */
     TkGenerateActivateEvents, /* 0 */
