@@ -10,7 +10,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkWinInt.h,v 1.31 2007/12/14 15:56:09 patthoyts Exp $
+ * RCS: @(#) $Id: tkWinInt.h,v 1.31.2.1 2009/12/02 22:20:02 nijtmans Exp $
  */
 
 #ifndef _TKWININT
@@ -128,8 +128,8 @@ typedef struct {
  * Win32 raster and BitBlt op modes.
  */
 
-extern int tkpWinRopModes[];
-extern int tkpWinBltModes[];
+MODULE_SCOPE int tkpWinRopModes[];
+MODULE_SCOPE int tkpWinBltModes[];
 
 /*
  * The following defines are used with TkWinGetBorderPixels to get the extra 2
@@ -145,18 +145,10 @@ extern int tkpWinBltModes[];
 
 #include "tkIntPlatDecls.h"
 
-/*
- * We need to specially add the TkWinChildProc because of the special
- * prototype it has (doesn't fit into stubs schema)
- */
-
 #ifdef BUILD_tk
 #undef TCL_STORAGE_CLASS
 #define TCL_STORAGE_CLASS DLLEXPORT
 #endif
-
-EXTERN LRESULT CALLBACK	TkWinChildProc(HWND hwnd, UINT message,
-			    WPARAM wParam, LPARAM lParam);
 
 /*
  * Special proc needed as tsd accessor function between
@@ -177,7 +169,7 @@ EXTERN HICON		TkWinGetIcon(Tk_Window tkw, DWORD iconsize);
  */
 
 EXTERN void		TkWinDisplayChanged(Display *display);
-void			TkWinCleanupContainerList(void);
+MODULE_SCOPE void TkWinCleanupContainerList(void);
 
 /*
  * Used by tkWinWm.c for embedded menu handling. May become public.
@@ -223,9 +215,9 @@ EXTERN TkWinProcs *tkWinProcs;
  */
 
 
-extern Tcl_Encoding	TkWinGetKeyInputEncoding(void);
-extern Tcl_Encoding	TkWinGetUnicodeEncoding(void);
-extern void		TkWinSetupSystemFonts(TkMainInfo *mainPtr);
+MODULE_SCOPE Tcl_Encoding	TkWinGetKeyInputEncoding(void);
+MODULE_SCOPE Tcl_Encoding	TkWinGetUnicodeEncoding(void);
+MODULE_SCOPE void		TkWinSetupSystemFonts(TkMainInfo *mainPtr);
 
 /*
  * Values returned by TkWinGetPlatformTheme.
